force-app/main/default/objects/Callista_Outcome_Status__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Callista Application Course Preference Outcome Status</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Outcome Status Description</description>
        <inlineHelpText>Outcome Status Description</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Explanation__c</fullName>
        <description>Outcome Status Explanation</description>
        <inlineHelpText>Outcome Status Explanation</inlineHelpText>
        <label>Explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSPortal_Status__c</fullName>
        <description>Status to display on the Future Student Portal</description>
        <inlineHelpText>Status to display on the Future Student Portal</inlineHelpText>
        <label>FSPortal Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Type__c</fullName>
        <label>Status Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>S_ADM_OUTCOME_STATUS</description>
        <inlineHelpText>S_ADM_OUTCOME_STATUS</inlineHelpText>
        <label>Status</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Callista Outcome Status</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FSPortal_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Explanation__c</columns>
        <columns>Status_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>